return to default config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,37 +1,37 @@
-#ENC[AES256_GCM,data:mRpti/EvzdU1UhcBoqjYK5JDFbqo7gdAyvj16xrUiman9gGXOjD+KZ+qv9DIvULkAWp+VYCCN260CGPZCszfRfc=,iv:g7UV5K9RVXpVGJT06FWOluy0QK5QFqARND1KtrKirMg=,tag:cMh1eK0o4XFsgDSd1cToDA==,type:comment]
-#ENC[AES256_GCM,data:VO8FHcvDzAgmkzha9fSZLokA2xG8CI74mPF1pjbV0u7fSCoCoJQ1XiM96eg=,iv:LGUbf+W7kTgWKNNVgP/O1NZxCkcK8TLrDMN9wqpS54Q=,tag:L+KLfwRdFlqoGP+FDOrcBA==,type:comment]
-VIP: ENC[AES256_GCM,data:l6fyJQ66K2/AEGioTA==,iv:9oSHali8vQngEBdmV5d7pJY3EfnCOqqK1h4wrICe1e4=,tag:xxPPUxSImSZPlGm8yIKZaA==,type:str]
-#ENC[AES256_GCM,data:rQix5DMEQ3vIpbKemZIFUjwPmOEDYQcJzr7x,iv:qpH+f9pcLL9e+KGtaAUy6dddGqpdSF2opiSaU9M2W/I=,tag:AHYlyk72EgU2CNBGiBsOOw==,type:comment]
-#ENC[AES256_GCM,data:VmAx6B3E60cbPHAoLsFUu2VIevsjCDFq4+30lOfoME2qxOsnPq+2bcfwmdFNTxgDw+1eroVenOnTQAp/9/sFMCd4j+g+2EwA4S+/NrKy21AjI0bw3+tJxMU=,iv:FeRz4AqQLyIq9VpdRwZhTMY8V1eac7BP5UmMYmMEKp0=,tag:tpYhDZ4Ugja/22EovuB3Pg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:ZGaPenkvs9Jqf0Ir6K8=,iv:VqbvCKajHGhf7YvWRh0Fd+wSZvmvdcMvuOaWVV3XjA4=,tag:SFykfkNuE3JF0ClOruRTKA==,type:str]
-#ENC[AES256_GCM,data:Sz+hytvdkOLm54D7vRObHMsZxRgxvrXH8wREQTUOxWqOFw==,iv:EBIh3/aY5aJh/6nsBgN1/4i2DX7K7mkbLKtDdJo6Sjs=,tag:2CEqHeziXlFqS84vlYAt4g==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:g2t/dg0MWHZpkH0tGw==,iv:9KpbjyyJ8n01soBgC8UT3ua2V487x4Pzsu+a8Hubwac=,tag:BoIyc4xhnP/8/0DpeovPFg==,type:str]
-#ENC[AES256_GCM,data:XG/Jje7BT16oa0TESKZYAPG89j2tyiF14wejY+eu1g3Ddss4PLqrtL++55sspgo=,iv:IBGNlgfKIQk0yFSqlSWyZYc/wzSmqsAc00HCPFdSr9E=,tag:Qr7kaNaxeg9bCCnWSKYgLQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:wUqLVUsZlyXD4B2ou9NZwdmjZrz3Wa0OAnoNXr7L0Q==,iv:LspYGR52VepyElvzmVl0KEXrquR9R0guJlRxogsaCAU=,tag:ARwwrVhUv3ZJz0EQkd+DlQ==,type:str]
-#ENC[AES256_GCM,data:Q4p+6tp71Vh1PhtRVZnb12w43+ih3tFoOIi+MQQOSpAnOJm5y0tFCMp85g8V2By7JrpxDYVoAnzIepv3q93XV6jjqxbsOQGW5mrOQIXQPVVydg==,iv:iNGVQUR6xHkIHQHRdwiiHhaiDT6EUnlsY7RGP7Zekcg=,tag:eIkntkS3j6ABl07u1GDaFA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:NuAgtOo1A9TFaAoo0XJu,iv:mWzJnq88wOtj2mAOm6/LV7vXpJ+iuu4xJMckLn9FCaY=,tag:u+EgId/jrI8RyHijIy0TTg==,type:str]
-#ENC[AES256_GCM,data:ozCIQ9ZTU17Y1b/igyGv7KyGRrbWS3zdGOfaczKyfd9m,iv:OJZFgaJn6/qwmbo2PRMc6greAYQrlVEiV+xKqzwdK/I=,tag:EjKyS1POA5kMizgjdaHfhw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:dEgU/oiF5P1A1NDzSZaf,iv:aHuxk+hrn/5xBofKMC0EIbtYtoLlpci4v4hbOzMenv0=,tag:Z6olv1OWG0DHEfsCcyetLQ==,type:str]
-#ENC[AES256_GCM,data:mGcdysecEG8Or5Thml4HnnhzNb/V5t02WbTl+67g5cB6x0ENlcIGPwFTfyrWAqcKsHZu7iisgES8JEFvfwJT8cBBXvyxBnZiAlJgBxCf0NU=,iv:FgzFKvW0T/XVEozJ17gvmrpaTtg86g6y9ZHO9smugVA=,tag:KQ9R413sKlr6y9fYo1pINw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:S4g/Ps0oJVFq3hskNWR2,iv:94gycdIIIBirURE6hQCEaRxTHq+iIK8E1HCTI7cJeHw=,tag:e68jsfkrOTmnheXi7KY16A==,type:str]
-#ENC[AES256_GCM,data:tFTc0MDBa9eLVwfoIREJucKvmq9ejmKqsPEfc/7QdPgKQQe43FF0G5/HxYAF/F0pFZgOOtuJ1wF9edPY6n2ZJ3d/gxgfw3kRQKWxYmgI8CJvaGc2tXoc,iv:hvKoWlIokC0G38adHjyeJyMGYli9gudNgRygBwS10eI=,tag:svbEZ3wfKcluMXGIPnQTFw==,type:comment]
-#ENC[AES256_GCM,data:NliCzo8CUlc4G/RNxyVNHWWT8cy1x5rkIpiMa0Qgv/Ify93sv/cuTnXF71u0rKNW6kUyHtkhpISvXYhbJ4uohHhq5vdTlEl/G2go6S6tRmZeLQPLxkzHo7i8iR6PiLnjP2BmoDOKODAxfSfPflgn8qOHm7fPhxWNFKdiMg==,iv:k1Or896G0alJM/d6zSpyW/aVIuBPgQpA6iZBVw8rRLo=,tag:pD5JQMcHlNcndFy1XTGmcg==,type:comment]
-#ENC[AES256_GCM,data:jBKCHJ2jghS8ejl9Z6fvEF4tvEdkIHKrEbM/mdDhGP9cxO1HO6KSgGED6Fwqup4MRaNMvgk4UkSvooCVFoi1ymawpDyB0lSRqWiVgFNycMM=,iv:SFeBuGf59XK4fQJMC4DonGYtU+D4ml2H0H+KmNdQJC8=,tag:wHaUFMowdQmD3hY0RDtRHw==,type:comment]
-#ENC[AES256_GCM,data:V8I+sOu40xEJFbjCD73eKLAnTPTkx32ZVm/ZZpJJkh3OFqGbWMTeF6IK+WEJ8F9RfQ13NBpk,iv:GxUrBSIMfqJm/KeE2EIf6nBObDCS/4zWgnOaXkZoGVE=,tag:CYypzSMue6knXHlA2O38Xw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:gAKT2O6vXiFSRYiM,iv:iAK/RFTsTPH8aitTYpAzVzfPnxfqXNAzhjOEy1pWmHY=,tag:/sE/CsimY+5F4wGpvLuxeQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Zq2jgQCN1nULWblb9VY/yzM=,iv:GJbakvEplh/VY5DK0zlqqZTSeNA2EmBs6uKMWQICKI0=,tag:uWhJNacLrVMQvKRnXjajLg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:vmokM99RThBlziYpVSGQP8vTuKDFRpK6SKiA6zAbETxRT2sM2dXOgg==,iv:zM8Tf/OiixwT4bz3PD/a50WRL0OoQXnGr78HyPLFlrg=,tag:/yZidC6JdC5E29V4klxKKw==,type:str]
-#ENC[AES256_GCM,data:p6qad+0Z3hG8GlWv8nJxDuT+5lc6xixY8WDmebEAnaBNHB2CwLsaVHTgwQdSGrwCWipNzbDnHLU=,iv:p01JQd7pSU+Ne3IMy2zyh1GJAuJXq7FNLTnJ9lTVVEI=,tag:NlJ10uwRare8KKu1zwO/Sg==,type:comment]
-#ENC[AES256_GCM,data:meK+idnk80h+STa0AbttjRYdiqs5+i38vw==,iv:b5bk/GrXKDXy5nFKWDw0LUG4fzIY0+PDCuwbeEqZgHA=,tag:cHfC31jk2m6/zkCzJG4s2g==,type:comment]
-#ENC[AES256_GCM,data:PAo3Bqxb6sLZTAWCT1iW8ml57BOQMaO3WVs1B8ct+zPddJRYzAlrcGieB3OYblgizy24OlupjoNbSLX6YDYZP0c5C/EHuECCHLzwq6s=,iv:1DRnA+GnhL8l2CpXB7qOwjC9zJanHD+PoGoYFl4levQ=,tag:TybNXZjnzXzsJSX5bSWhBQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:EvHp9nRbu2bcIJYoxhvfTc5m+fPWW8jnF9Q1h6X2qXndz/8GZq9YrJeZweMV+B9J,iv:PFFPKYT1xnzj1AFED3tLH43ADI1hk1ZAfULHmyBswD0=,tag:qH/RL8lp6nRjdPUy2MmYVA==,type:str]
-#ENC[AES256_GCM,data:wDLJZj78iV6LatdaASFAz86vYPEtYO9CGMyOiVXCAhgN5Vy9pNK2yVtplkW+lacX92aNIWcryYGvPaKlG9psdyqet9gLQw8=,iv:ugEQOc2eWIp+eOF/4TujRcCMn4JiQdiaVkFlwd1U0TA=,tag:6fCSfuYUd5ufAADhQ6lQkQ==,type:comment]
-#ENC[AES256_GCM,data:eICmQT5eWZtENhUagzYZjVZUrIXAJAecz9rUM8VgUk4vr9XFu5hi9A9UQjx02D46Tl7ViZhT,iv:Tahv9hUVnj0B0TfGQfQ/TOPS42QQ/FKHQ6povOYC0/8=,tag:oRCAeOH7M5LDkcYmYoMBag==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:76LBQZYmvQ==,iv:Q34BQgqlObLi13BvRIekZlynV/MNZMlGNWrj50IhKmY=,tag:2ohAhm9UtfI8fN6wKsHPQw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:L9VvkF6wq7TkZlyjDY9GYgXxkeg=,iv:LylVDDX5BRT8GQgmejwBwPxg4xVFbbUFqluSXcujjg4=,tag:7Ckf97uhzkOLoPo5iTCpEw==,type:str]
-#ENC[AES256_GCM,data:VhbmwuxlCJIfVXX0Sp0=,iv:jiHWVoawVUeNtMV8vQ94inrKfGgavqEDaK7LrL+XQao=,tag:286KV+tbVOsXOPwTElWEpw==,type:comment]
-PODNET: ENC[AES256_GCM,data:okgIncAXUpQtTFtfsw==,iv:zh2BWYxg9hHjKoiGmlk059ilOVXiPTwo06HBGlsmtfw=,tag:hKNsy+yqg4bbC2Md17IZVw==,type:str]
-SVCNET: ENC[AES256_GCM,data:bj6LpxiTpEM5T7XIjg==,iv:++7BpwfiUp5f385ZsPPLCJWa3THDlTINB2F7NachEfM=,tag:WDP94a7XIfFNR5ZKBoM/8Q==,type:str]
+#ENC[AES256_GCM,data:ZfsEUjl/8EsMJJKx/ncHpbEJ8eAtTIQzORsleZR9hF2ZJoi8WWUFTe7bbSuR7aTfCqULDyl94lcF22Fm2gfIy0E=,iv:Fuk5jBM6aLDxtWHJEHHmLCQdwLbnEArZUTyvnyoOScQ=,tag:5Zrq1wol5Oif0o3oWQ5+YA==,type:comment]
+#ENC[AES256_GCM,data:xdo7r9gUgLa4lUJe/WY4Zj4v74kIbYzVVw7Xka0sKT2UAciPEvZBY3xxPhs=,iv:d7CfmkTzU8YJtxDRpwIPzM4E7YeVAdrp0due2Ac6/QM=,tag:Nmxb0T3X1/CFWfUSrL+JRw==,type:comment]
+VIP: ENC[AES256_GCM,data:88sobwIceS70LZeHKA==,iv:vFrFTi20n4RzSaAmcnEaJBMsD+tI3obg05N+umbET0E=,tag:kAMe0Fmpg10UTgxPKJRZqA==,type:str]
+#ENC[AES256_GCM,data:wgRSE7trg6J12ngH/fb7tynVMJ3qQBvZTSmk,iv:isg3sk8Cq+P6Vss6p+iPC7afekvlHyMCrVapD0OWq+s=,tag:4pIFUtYxcTpx/f+shxizhg==,type:comment]
+#ENC[AES256_GCM,data:VI/GqQvgPpO0AbJIobm+7cgOFUSQfUJ5Rl8vTIRTygWeiEe/K2kxSxRBlYfAWur68UMqWw6bk35S/rTITcljmyDnZmrV4tlwKYnhTbUpJxlO32+/7ci3euA=,iv:+bj9zS94i3HIYqd05WM0+szyIBbSADteJjUtrt902r4=,tag:xQ3gvPo4deSq6oH71EszWw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:cP0nBEXVvEnOgnUBPW4=,iv:+A4fGR4iOC1QTaNabSfnYfs+WekuwrcPWsDvfM0kg7I=,tag:QTKdN9zSy3EImBzNWbYMsw==,type:str]
+#ENC[AES256_GCM,data:/RKDLHUbBSherdp1F6NafvSv/qK1BJA3EEaNMJG0xtnbCQ==,iv:8PTsjhvgPzkYgocqrUC1tTJyxKykrNWjAy14fikmjAw=,tag:MmENBhUZLoodItgDHmvUOQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:OeytbJesnQnZwYMOxA==,iv:9h5Vx7o8Evx202+RGm9W8wtgwMeTSbC3agwoyU3P3UE=,tag:k4QekqqHsrTHpjA1r0tEuw==,type:str]
+#ENC[AES256_GCM,data:dmRhvZ/qZfdq73c5EAEnz0J5iYpXGMs9q5ha971iqhYX765GHzA9Iz+NVqLIbsY=,iv:9XCvXbXvkvDeyZ0sOMPLgM3fpfRel1Wr3rs28nW3H+g=,tag:Ai1qUUc/Mhq6gWeKSwUVkA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:XwPh+QuIVC9JYEQUwGHhKFlqLsrDvABA1WV0NVz0XA==,iv:AjirRiJU1h6V1RpaFeoEo7GDnTfOo/S6JVQMgIgNLY0=,tag:kgogVNIoH0IHFng0UAHeOg==,type:str]
+#ENC[AES256_GCM,data:lASXFqd685ncXrkCLn1XLsXIyYyTTOa4RKt9GtIP9ybpKax9vTaQ35e3dBLTSHVxpOuTphyD+t+rzjnw2gNZ59zj/XA/+jfLkmEzC+PZzzyyww==,iv:4FVaTKjbGEeo0YsLswTLSKhpfnNom0+tp4a8oF1b+hE=,tag:wB8JQVkXsBtgC1oxdOr+Tw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:Ab85GMDoIYFEOd5vYaaF,iv:I+86FatZGcvCLDp7cCwqpItSLQhnPUp53OIn5XZLv2c=,tag:dY44aCeD/FV3HRk1yE5RiA==,type:str]
+#ENC[AES256_GCM,data:VkJkURqF+C0U0IssDpxi4SlKEd18gKAgP2wawizIT1EM,iv:ezhNDL8cWvURctnc9ROyvJ3+6e6RC6S3WNdTklwHxxw=,tag:56kRjy3NIgC8XjPfbtz6JQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:l/PJOjX2COmFuX4TejSQ,iv:g+gnrQvHW5MiOG3yAu1XdQyXM8cmVgksxxHTzGnc+TQ=,tag:7D8GdqEPv8aAuprE5Anomw==,type:str]
+#ENC[AES256_GCM,data:YyiF1SiRQGA5O+3AEMS2Toq9g1A60ckw1lO9NeiLDSjGjeoCj6oBPE9jjXMC58BQbfyy/5vyHyKnaCJxS/NywPNL6PmQ2VuW/4oq1CrYF7w=,iv:WBQ8fivuzLlzqV12Si3PbgUkmf69KFWubhbq/uUTOi8=,tag:oEBgIdGOM38aL7A3ueuPRQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:00EwVQx7dBgaRppZwDxo,iv:lBFxrAK2+f1+HUt5DIiQnFQCR4j866x/+9FcbbIiJwA=,tag:eI2x5ie7Gudzww7NpCAIog==,type:str]
+#ENC[AES256_GCM,data:Yr91vifOfaCJ7uGcIOfr7tMeKELHfZuKx6dSYP/3ywUbsihQmXa+wq06TFNNhcbJ2/oKrMRob1IK3FtDMRFPPqoF7Jv83WJwqPUdsdhyV8K4CP7rVcYZ,iv:tZAUyT8pHaORsqPzscGGAxNLBZH6/+D2yjPqxBgwieM=,tag:lc56GDdniSgi1BouK5w+sA==,type:comment]
+#ENC[AES256_GCM,data:6jde51FI8ZvpN4mLrnsZTMqRA8fDPaDS2zaRz1p/PIXx/FOzch09xy+rinKJnEuUsNc+Kizu7xBcd1+rOL7zYaQ0phqamlqVlTFVVMPVT78tEsb7FiW85cZ3GK01qzPzamZhuzLGZk1IxgR3WqGHQmYneQT2n0CLIJUfTQ==,iv:JioW4c455p7vfStPvvGijhFnjxN7Ijh5oLRsrrbKYUI=,tag:sLaIlAoUtreGiK7ODaA49Q==,type:comment]
+#ENC[AES256_GCM,data:8kC4sPM0imunjmN6SYCf7W71a0Z/pcVaJ+sACg4cLjhbywIeBdhN4ftd6INH67gugmTtfVUYRrz+S8ne4e72plLSKVNqCSTEFQePSt/eN/s=,iv:Pq+ZbUu5HDPV7XZjplzNJOkaDneYvpZ0woSHXxID+2M=,tag:IIpZtxOpvN2G6f9aj6xKmQ==,type:comment]
+#ENC[AES256_GCM,data:FyOI+QL6f06s1QUTtGJsDXCU0Dg+TwsfLBm/QA5rLVvvQwpROOo2x9xB9YRz9yO/L302StCh,iv:rSBgK3QQZNrzxBt+6oYzkWLgLe+5mp8Eq5crcbD6qcQ=,tag:DmD0W/mz6pq7Ttdqylv/LQ==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:gUZLwQEkrKEM8dAL,iv:s08ztfrcjiUAxY4m2T8N9jKxlEDVjX5XZy2/oCNGiKo=,tag:Xmc78uoJV+5g4CIgoS9rWQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:m7UYBRAiUxRQKUNiuvFqPjA=,iv:VoBHGSs52ZWsppNzinrvrcGZ4H/PL+Krc/gVl9wG7mM=,tag:HeV/jTfQUjCIE+D/oCanUQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:OosXorwHqJyIqh6vyyGBt+5ecmJiwLUGcZUell5FrbpXeMAms9KK3w==,iv:ZOfrtG8c3CodF1TA8WVbMPcbaU5QCf+4Oy2nVc4tETM=,tag:EAl6Xm3yHHPPPxC6trDUuQ==,type:str]
+#ENC[AES256_GCM,data:+jeLdAhpiXbY2V0f6CAQu7ddIXYI5x1Q2CFMO+X9w2kGUStZ6RjqQOKaENHrWK7zkC+GFP8xYVI=,iv:eZTC2YswxafwY14u4a5ykPcwHKi7yn9wwy0WmcXq2so=,tag:HWoARemJwGjhHVVe5LMDXQ==,type:comment]
+#ENC[AES256_GCM,data:g7+lnG7VDwuvvk5QYS6wDVMnVHx6zkX94w==,iv:smdY+q2YvpouPLnfn6JuxwY8FwRp/DN2S8y1PUAojjU=,tag:vKjDQN7OZOyfDglOMeZp5A==,type:comment]
+#ENC[AES256_GCM,data:1Wh1aWza8s2jzwZCLJGl1bZ/A7koEDXyYJ2g2DXM/5OMPtGhrTKRpPsWNh67uMuc/XNkDWn8EpJ3PTlBtjWALNgTfkPDieIa3FEwMWQ=,iv:uumTQNH0XAWHQh4fb+eJKynekI3k5jGvsJSYOQPtD74=,tag:WD9sLzbAMXXOLT4lkkE90w==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:qEKR/CWhmo5Z2OuM/5ofpHkwj2/IwqLw1C785zBJxrzcjOnHeOsTpaASWQXFQhaJ,iv:iL2EjHj7SCV94au65gyCesXUPd5PuQNXF+QAqiEGTQg=,tag:4yRzU9bBbNENGCiitJHJdQ==,type:str]
+#ENC[AES256_GCM,data:7f3Aan25pqwBl4YfH8J7BU9HTmUJz1PP7LWXJ0LMKcs0k7pWDrEyA2IFM3tTX8w5Qy3pO1s0Rynh0liWR5k8FHZ16/AA49g=,iv:/PwZLf3JhHxKF0DKE2r5zlim39oAbWGhYA3BLiZ60Cw=,tag:nKXePvU/ee52pvI5Hhcj3Q==,type:comment]
+#ENC[AES256_GCM,data:uO2ZK7YhGlb4JAl+J54R6umml1s50icXu5Cecr2+6VuIyDD+sYEIr9aK6LYJvbVT1Hz8yIwj,iv:8UzxQv9elOemz8G2GBGdVtzaIZFzSFG2PiFqHMD3AQc=,tag:5qOCmFel01TwTKkdHccu/A==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:7edWRggzXA==,iv:sVAWgT9mhkbOJoiTbi49IiKH805PErbF/MY5lEyOHwI=,tag:Ee5l+ewDONqqnZfWaao4jQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:5BScX8v5ZO0B805f9XhGj09BJQU=,iv:6oB260c12qpzxPuoOdtLjV8FMn43W9g5VaRrloeBIRc=,tag:uifu69pd1RIXMN+02OREJQ==,type:str]
+#ENC[AES256_GCM,data:znYprvpMVkUj9gvxEQY=,iv:5T5DJ2ObZt9DmLfkOwdAQm1Cp5Oa0KUULA3eYNsxg7o=,tag:Jwyb/BuEUuVM+JbPlI356w==,type:comment]
+PODNET: ENC[AES256_GCM,data:H1FPLE+hVushQlTWaA==,iv:WEL4wl5n1HzV+Hs6+U0THAjFyuJNZ2h7AsurDrFm+5A=,tag:ety0U1mg0iAIBviwW3m+YA==,type:str]
+SVCNET: ENC[AES256_GCM,data:yQPI5s4x7NZZR7LHCg==,iv:8uNC71tr/m2qeMKIXtW1VM+jY18XHIO7CG8y/SKwA90=,tag:MZEaNQD1hYWebj5lqyoPHw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -42,13 +42,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFNlYzcEkvcU4vM3k3bTBz
-            MStPaGdwSS91d2E2aUpBY1N0blBaNDM3K0RjCnQxMVpUUnFQbG1CTmlBRThWZXNo
-            Q2xtS3BtTVMycU11M0Y1UUswSFBjdGsKLS0tIElOOVdXdWhHRTJZelZpbS9tM3gr
-            RU1jRWpJOTRYeFF2UlRpM3VOUnJnUVkKyx4e8aSehJB40EG4ukSKGsiHlyJvzdBM
-            3xOrsXsuRj5hmoYuLNt7N/3u3RYjSIoBIHCgtMLQxzJCvGYKUQHNUg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByckFtMktQNkZxNnRYR0lD
+            bWVxZG5lcXk0UU56Ukp4dFNQSCs1eVVBTkgwCk1jblp2MVk4TnlBbmloYUk5Q1pV
+            ZUJNWlBkTTRzQ2xjUWFlblg2enB4N1UKLS0tIGRxZHNqdnVTUHFsVUROcU5wTHNv
+            blBpNkdXd0pENEdjUjJ1YzBVa3JNaXMK3ye7+gAryEx/2tD+kLI4N9FtHQ83rIXc
+            g4ffys2q01oJQ5zSRRmXU04MA0DlUM4l6aC3qjcbFmgIc8aaRDfJ3A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-21T19:59:50Z"
-    mac: ENC[AES256_GCM,data:9dim6UI/kpezU9W/ebd85wOtTj5iusrOyudtYARZJtZ5dZUNHeucpG35nyUqpQx0KhGSU+ESFs7ZGWcIzEmnXx3EiRN8y9/pemYYtvJEJaoGQ+I1cCL7lxtq0NKsROKSyG8BjGDdkU62jaIbTpcJ8H+WKDHb/G//VK4I1AD22os=,iv:bWUXR3Nl+UOOFZN6WznClaHN2CN6+I/ANxCWWw4W7mw=,tag:A7T8SVDLr7SFYXReUsFWJw==,type:str]
+    lastmodified: "2024-12-21T20:48:44Z"
+    mac: ENC[AES256_GCM,data:9nnzmmJ1w4EBqZpVSksxeSXk+lwxVN5uwFoGMK8tCSk2+fkVSlOSdzPGQqEFEMb24GvTOw7LgiBeenYekaAwFtwC5HnYZW16eidbDPRFDdSPao7oXKNk1jWFIgIpoZF58+DnbP7ak0/hwg8gujZdB0yR7sGSkNQcb3uYPJkCaTw=,iv:PE4b9whP7fm2wBe8KvgBxxBnbEmE3a3+67i96bkROJ4=,tag:ugesS4Ycg8PFJiOWUPOY6w==,type:str]
     pgp: []
     version: 3.9.1
