--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,41 +4,41 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:K6wYlEgRIT2MLi8QPQmhCzD8bWUe+AuyFNLvRDm8HfaCb4sqW2yNEUp6+jlciR/FvAgzYDhYUoNsZVwmj9JssMo=,iv:BLTCmImATHmr/suTzUT7UcHptJpmYezO3KmL4TlXPMU=,tag:d5dpcKqRbQyf7sqGNi9d1Q==,type:comment]
-    #ENC[AES256_GCM,data:bbjCWdLrzWJ1f5lMn1VvMntrg0rBuMSzN7aBe9kQf+79IV6VuAfouQvZILs=,iv:fLAeRLhdNI2VrC0Yyx0WMJ+ljFccpbKtAtpPDHVrYxo=,tag:4kwuKAnUoEdt0a5QPRjYTQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:PYW+Ondzv2KadzFtUA==,iv:gvG5gbzccgM9HTDy4efrXB9sYXXo6lS0rexWSdtz/Qc=,tag:ZMtujysGuRl5kxD2RO4Llg==,type:str]
-    #ENC[AES256_GCM,data:hQ9YkZth0ZwfIknFN1qQhT/lspr+07kd4ZVb,iv:PQg/2vBp3ajmTsRPpiXGJwwulYQwZHGWP4SJpI6w0p8=,tag:NCPB6h/ZwMgjp50AyZsq8A==,type:comment]
-    #ENC[AES256_GCM,data:EeZyJVzdCf0QSubw2o5rj/5zIoXeIG07njqli7OyxSPNiYam7hyIF9F8IvhIBq0w1qxu5WshYCiDeMtiY1la1mxQGcUViMWIoaAXZVb3tmvmgf2MHlGZn98=,iv:Lv8l5vaJGnSYpolXSHuFvy3BZs0LBTLcqMfrLeREx8A=,tag:TFwdY8GRw4/zpxcjHfTtmw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:6UjB+mN0H8hNf8xV35A=,iv:f+ctWderllxRbXkjHzLlL+n3rZ3hi2h3NTHKFoIBLck=,tag:ALR89OAY04zMOPJovnM8Xg==,type:str]
-    #ENC[AES256_GCM,data:TgUmtYmmytOWfyg3JORWe9jStzlXwHt+etUfBc97JQPIxA==,iv:arf910c6oOyT1lRro50WJs2nobMdzIZD0TSKnNqWg0I=,tag:9z5iO+DiPE0CsOwuam2icw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:1dA+H4SDx/VX5RgTUQ==,iv:gPO8spSHZSOrGkpDri12wGNxjDL0tFa/hUeqdeZvdC8=,tag:Er1tAsgnESrnQ2j7SyarmA==,type:str]
-    #ENC[AES256_GCM,data:QL6qWPMeqQRlx0zReQFOfF0ZESchSNtE11U5Mmt5uxuoygYz7xv1o0kYakMY8yA=,iv:M4x8IroCfvZrVYqr+irL7TvpfHUEnoZEOLKGkMExsjI=,tag:R+suqmjHvuxKnXoH7r2wrg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:9laR9bg1shVorR8NhWjD4LhTMp8zQCoDdjzPMjZ3Ww==,iv:Mi5TyEGYHoG1aZi94qXSKa/v7XyYiTa6AJ5s4FaiWyY=,tag:pZPijAIRba3NORnjZJfvsA==,type:str]
-    #ENC[AES256_GCM,data:r+B8TwJZjS1YXpSBhOLTPd4WaC+CT5v7b8pLJl12gcf43JE0t8fQKsfI8MI8rgR8nx63ZuMm7MH5n7MHkFhiLPCHc/J+XKQIcP5BEpJ/LZIRfA==,iv:EP0ZTn0mE8NFwuIN8BaNIaNEaMKEdr1RqskcGACKEcw=,tag:N+FNDKaCiyNvhMhSnWDuvA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:SkD6jkKMxOnTZG4ryfaQ,iv:NiWV6p8BX3MgibpUmUfXK3YL9Ud2/raiGfftE8TDIso=,tag:chaMG03ZtPKrvQF6XzX38g==,type:str]
-    #ENC[AES256_GCM,data:mHGrMYYIKF0p0c1vvNf54dWfzNPyn5myft4wb2FpeEom,iv:zu3iC2ThF08VDOaFNkileI0DRzTaH8X1Kaq6FChbVZQ=,tag:TQdz73LfXDYPR6zPdgYXBw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:kriGRtgTZeVI8q/2mv87,iv:dhVP1C0Nl5jsU66jiJvZ/RhWC8levYHCAnu9NJaEAB4=,tag:SXDvaQBN+/yDDpFMmHcJeg==,type:str]
-    #ENC[AES256_GCM,data:O2it2a6MM61YX7l1sBZ9LJ4lM3tJpHUAWGegGP5MarV1evUEHPG1SGxkRIm51ZoDd8vqHemY9eY8Hfp91wr83H6qSxpUBEJNHziFE8lx514=,iv:okmqst/VC7jY3Jbkh3FDyamxGhna5CA5CwGZOwI6KfA=,tag:jw9Xx7JKpqcGWARbv19W7w==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:YjXirqEtfpeuc8aqyiK/,iv:DLr4uIUgbcsYBlCavoGgmz5f7A4CtBOROdg1D1DGDL8=,tag:ySykh6LWOfjMMzLplwSFzg==,type:str]
-    #ENC[AES256_GCM,data:phzGJLn3chONT5wTJE7il3dYjqUlBPy69vxy4bcA9V1JhTQyYmt0mCqjxYt6dPJ7kKi5kQdeY/I7o74yh94pQt1/UJuigM+Xe5FPgoY+K1Ut9eSuSBx7,iv:fNJrVP6WFWQepvs4XTWpypJJ+wXZ6scL+69BrznbcjY=,tag:P3QJRSPvvbWVOFoNH8Dhzw==,type:comment]
-    #ENC[AES256_GCM,data:6Dd0oo8WXYuASJa7RPmDdR88C13ieFEEvjMGnIiTrnYvpAITRdwl982UmOyo7q+X3QpiP/HPsXCIUPOWEgKyUgNmJ+/Y/gWDkTK8wAa0Vrtn4RQWL2+C7ASq/eLIxeV/LwSuglMeWaEl5gJ548Pu4IVZa8DSiA/+h2O4/w==,iv:a1+0MOy1sqin7j6YKkOhTqo0quAe3G/755+O5h9sWGw=,tag:Es9Oo/1qz6GSeInugmIXtw==,type:comment]
-    #ENC[AES256_GCM,data:AUfUCtXZEsdN2KCCblP3nRLHXCjQAIv8DPtSpryI/NCaYesWFBRKDFUyONe2ACQ5jooWHU8KQIRGP1jZNAFgkrT6Ej9AWzmceyS6cvk2FQc=,iv:crMLJxyF560SOg4vcPyKyc1jJutHwsjiYBXmCmy3HAY=,tag:J7xM38Cn/MSyf4Suewvjiw==,type:comment]
-    #ENC[AES256_GCM,data:mC44u3UJ0lj2b98mEYS82UBR0Xta9say1+w3ETNZxI7WUYimJeCJ5ktCsUfZboW0/jyx4x/O,iv:/Kwo5UzxXhgJCabkPd8Xs+RVM9YzcB108m56465Hg5w=,tag:DBmiyN87zxgWQM5JtmP/cw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:i9TP6HY4GI8HLFfV,iv:vuDB13FmfFjqg7E2T0YpcRj90KBlDFBfdNk+xF7fyb4=,tag:q55T1kdHM8kL2J8m7WLJXw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:fi9h96lp/OaxjsXOSOypYTk=,iv:JPJiFOusOrOfJh1QbDybMsLACaaJS0wBfsxOAWij70Q=,tag:FX+Wi/JENoBKF/xK7EGDyw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:wHPiuZPmh843UfvllyhxknC09PvdmAX7I/RI6BCoEbRFvemH+PyODQ==,iv:Jxt0RPHNFi1kFxPYA8sv5nbwRQgSexMVdavPxlAUl5o=,tag:2GPk7zBuv+z1QxtRKjKhIg==,type:str]
-    #ENC[AES256_GCM,data:ApHm5WU82LxeXBm8MYCDpTZsOtDWulSRfQ26D3qhkLaDcoeuQYvkiVwg6lOVAoyOPf/Pb6a5s2A=,iv:xnp8JteuD5vQt1F7Pww4TWiRb5QJkqTBjQtYJlNGIws=,tag:6daSDSwtZQPECBvcGbAxzg==,type:comment]
-    #ENC[AES256_GCM,data:Nqkp3aSYKVZZblDTaVuRaKWLXPxAEGQKxQ==,iv:NpCweVJNvNmp+t5iGcPcETf2o07Xllzn34hR/hQnMzI=,tag:wNnfAQpN3XhN+FdW7B9VUA==,type:comment]
-    #ENC[AES256_GCM,data:6vMn+XvVqW3JVjFSDiyOlm1MRq9/kQTjnMDX+YgPkjRqE1Nhl0nuTJ1pTebEHt/HaT6ypOu1OJ7Ad4CH4mEG/IoDwHbP624URAysAcI=,iv:L2aR4Db+rfpQ1Cfuoexo+HR0/mDuw6pvnZvHsNF8Hjo=,tag:+D9C29KJ9DqRP3YWgnl8ww==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:bBl1nFcNaEiZvYE1GjBsjU7Zp2SfV9s3BuqAwuE2+DGbL9Vg0Co/LQZtmwvUPFYR,iv:/rAOnZ2Oko+eFOfxOzWtzEM4jGkYgZpKDE95dwa4UA4=,tag:0sWAXIaJknhjnY8izrpNnQ==,type:str]
-    #ENC[AES256_GCM,data:HHHrRb0Q71UTCPeRYbF42Jx9hvd2oGf9zeHT6TWsR4L4FqDSehPVt9KK3q2Ol0CI4iaFyQMDb0S3MM6aJxLerUEdQdaC5Eo=,iv:M91TXwwhg/B0wiwrkcQ5SFUl9ZQji/r60Aa/gj7R6FU=,tag:Z9VfB7iEMTvIlRZlaZS1Fg==,type:comment]
-    #ENC[AES256_GCM,data:MzBkvoqqXFP4Qj1uJqyc++iE/tbHh++bZnk0Z89HJIuLlnn4COKSY+7vXkGYsNgVqkbRO706,iv:1d3vG46YGztF8+8Vb705VJlgxg+D2kO/fmljJ6+rR2Q=,tag:E5AlgpqlIaN2J4TtrZrUgw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:5Z2Gf1wgxg==,iv:hy5nJLY1YP0W/s3Jy4lV43DgtFQUEoIb00FBTBGicGI=,tag:vrEfjQuzHm9dLmA0sJu+yA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:m2hI208Z6meVednx6h10Ilp9o+M=,iv:9o48OUB8LkjQ/XjiGYFwc5grepvq7FhDwaCdZi38THE=,tag:sg69bA7qbtB6mBpoKjc7qA==,type:str]
-    #ENC[AES256_GCM,data:PBNvUwgCKif4uOrSuA0=,iv:20IkL1EwCWJqWGCJIvBACBobsfc2URzpvca8oEczvnk=,tag:bZS9uiUt9LGVukmBhboAJA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:1SbdFYOkgAjCMY9oeQ==,iv:OgEc0+I9zED4kzxnPYp9l/761mB+fVk6BNs/2/1yAP0=,tag:MTh4JG5xWoRsEhh/3pJXag==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Whuo0SW7UOI1OhtfMQ==,iv:+cQGp9HLiQ76tAHRf6x9/xHDUeL0TYhXOu9ozF0CMAw=,tag:gKcUNwT1HdV3Mn4uk3VXhg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:HTpw9w==,iv:Of04FX5SsoLh7jipPF7N2gj3c1rhIYVHNNGBM9jRsRM=,tag:8tW/UAklzvILCONkyp55tQ==,type:str]
+    #ENC[AES256_GCM,data:k2cKRGWSCh47zzFnabtNfJlqMidBK2xSwaXNAsf+2Apfqhg8biI+ZGcwUwBIFrQ8UoWm4ghRWXYMlqNjgk9sV2I=,iv:HxBORvsCt2ZIZI+36ozObWXMkQ2NOgUqLLIN0ZiSsME=,tag:iuxbQtrg8VZcTrHpDRvYxA==,type:comment]
+    #ENC[AES256_GCM,data:uZWpcJRdQcwwf803TNPiwx2Bb6yJMTebDp97ti+0B3zq3tYpK1cd+OSETF8=,iv:PAgKbWQtJzTEMvIGOnRHywz2OJTzlyprM3yQ1hs2yD8=,tag:d0E3UwD9ZRg5ob2VafJPLA==,type:comment]
+    VIP: ENC[AES256_GCM,data:VNaw0WW8Uyhs3onCdA==,iv:N3EWKEJHFvriiHLcjcU6j8DXsBgLP9c7kXPC+UHSMHk=,tag:If8FWPotnncbkeSUQUikzQ==,type:str]
+    #ENC[AES256_GCM,data:UH9lUUdFpHDI1Jf+VOewxh3EcIfXm1BbOGt5,iv:mpjqiUjhtZP9k2WR1QO2Kyk8qMeJFnatvzWBsBIj4qc=,tag:yy9Zbjv84hJgTPx7PNvPdQ==,type:comment]
+    #ENC[AES256_GCM,data:MyBY8QFB+bHejTFMQcM/sDjeg+t4wY6HWx7K21HdP4wcyPBo2oZ/unwzEj0Kc8eAdTaNP6mL6WrqJryg1fuQo7ySjJkskNGnxlEyvgLSZNUddC4jE1/cc2s=,iv:z4bHejRSN5dgtv72XitB0aHl1uRMX6DzwFrVnj+cPM0=,tag:8qgL2AnEF9VM0XBxLoPHCg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:T8SmtxBjDXLxEtxhb8U=,iv:XAcRTL9owlkjqzPHqBP0/7jR8nMUglDOIs0aLhYtkQM=,tag:Du97tOpnyoEpG8zR7Vm9+w==,type:str]
+    #ENC[AES256_GCM,data:o79BmCSemBUwk3yw0LaoAKiX6Y3ejGnMr9d11O8lljODoQ==,iv:FwwVEqaI7Gtq2VWQPmD4VIltfQrmnEJgyykOYYQTs+Q=,tag:wztaR4KAGRV4UO+uSuOhKA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:Ish4pbdq6my0VNHT8A==,iv:wRS8Q9c7oMaXIloHWTF0a/MAbUChw4q4vJ2Fc8irE5c=,tag:BSDxHi4A77urjl3zaNd/WQ==,type:str]
+    #ENC[AES256_GCM,data:p0CHsW5u6toIhZuLJSymntrs1qtgfteBYhQ0/X9byjt/wyzuu4O1YrGY/vZXzkc=,iv:OfmQ6XQ4SSxltxxZUyMGuzsiuGcrcI6WQbt2FM2rmfc=,tag:D5nEZZjpCKA5Q6KIl5bAIA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:fLOSR7x4ZC1ObZS5pVccsSu8oxXWXhaakqCCsho62A==,iv:AYu2HQTnUVfDKfxx1rGQnkPPkaRm1WpwMaZBC1SXAFI=,tag:r50Eze+ddsjLuGk/V3k3yw==,type:str]
+    #ENC[AES256_GCM,data:mTuPb0Fq5PoeaXEHrtSO31MTQT9BLlKe9zNCQoLmO2WRu48BF2yb5pqLwFb2A7dRdy67IzkHoz63aib8LivrU1/irLEoNHuGBCpQ695sJOAZsA==,iv:GhuGxgSl8mLG/sW618+2SJPm8SJMnlYBk9Uo9vgAycQ=,tag:/8hCKrOmb/f/qOe/NBs9kw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:l1BLY00LVzVfRuSPRjsg,iv:q48Iv5LXqIwGz27ZDGos64NCfV+cUVJx4wp6KLdixno=,tag:i6zBcLjie5qSIvEYZW2MUw==,type:str]
+    #ENC[AES256_GCM,data:+0Qn2zehCZ6YZK2EHrVMpP7DNEmopwYzL/miSm3namc5,iv:j5LvEvaEjsGmacCwu1s5wu6+ufReMbga7j9HN1QBIro=,tag:eURbN+2S47Mx24xgaCPbGw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:2HGWoaG9Vkr/7OC2iKZ4,iv:tNpfqOIjG0HTmSJpWOMO5NbaAex/Y+HQdMm9J42bAxE=,tag:xHMLwcSMVWo1ueTctLS4vw==,type:str]
+    #ENC[AES256_GCM,data:IyGzC8Na2Bw3dQExP38sBgX1NLZZ1j7CJDEUiQRSo4wVwRUPH92H7NlBlypwd2E2oWnEW7Ugmcd97ueJsNbGoCsOLA6ZD6GhmYYWanp/Pzc=,iv:bgiRQTexbHeWsDTu5/J2bFs4iDUw4XRuysWQ5EVq7AA=,tag:tYWpYT2iVIm8DLRTB7mU+g==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:AsLTisl3/BH6WlbbdVIL,iv:0QycuPZc0DxjMCkyF6nwe7DH2BFQXYaBSlrgUe224Vo=,tag:5Nwe2LXLbd3VQ5eEPjj1Gw==,type:str]
+    #ENC[AES256_GCM,data:L4a7JxTH2UACYVIzHmTI2WzKEUkW9JjiATWNbKF2Id9gu6mGjQMfuz3ju7ONXTwbHYVDMDLeJdVuXcJk+GG0dL2lmd6EoT71Ha+7+x6suRS0XUEgl06R,iv:LXxhXWUxB3YYn/3VUi+9NGXfw9cWHEXzvTsiw8xrwN8=,tag:9c5Lbk8BjkaZsyD5Nq/R+A==,type:comment]
+    #ENC[AES256_GCM,data:O8gC/ndvqor/UU4R9np9pQ+KXakUdU28J3pMjthVth/AMQA2IkHwC3D4f0ElIeMKA+ehV/uCV+eymnXk9Xv4L53kjWRNTY6NGIH8MaUImi4D4Lh2o5YDlrQ8oXVY2mDW2/hpPQTyOmE9+dqvAR52aCLtIfypwk/rL1MNug==,iv:6VBZFKaXzmXCB2FOTkiIG02tCMVgiWh4JsLtwXao3Og=,tag:iHlLnllQ/21aiPBgnVvb6g==,type:comment]
+    #ENC[AES256_GCM,data:4yKrpWhEHfUqXkVj2TAqKndCPBnj12Jyo+MEQP+R2ox8WLZsDgjNtZXlB+gGLoY1FDWnUS9n0Haygbj2TuKsONRyaMtpzjENSeWMG/dPgI4=,iv:ybUCNxJ6XN5VFJPKMBBWG6v6G2IvrZKLHrcSaYNN9Gg=,tag:iz83UTbI+Rvj3RNHpZOV7g==,type:comment]
+    #ENC[AES256_GCM,data:w6uCLk2PlzZB89QsEtOyC9bIPZtEH8vjOKZzDOEGHWJ2sXSRQUE9/OErQpeFs3IvMSu4sEcx,iv:USA1wlb05ob4T86RjERqlU53DRmz0h6dWMpRppwyXKM=,tag:ctm7ujnrvLetIfgZaJJFyQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:Df6oIqqvmzJjVBok,iv:N5184Urj94IS7ZduRDCy8ranq+1ClfQT21P1Ynh76s0=,tag:jaMeb868RISipLWaIaEwng==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XKdJ5qNtXIUtp89v83dfoDo=,iv:6GqKuvawVjke8ILOQH3ZwuQWWy9AR8Xq8L+bcNv4+Vw=,tag:MnrkeKdUqJoQs8LiOnpVzg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:QpQ+itNSW3Ial8OqWmF/zYq8nIff4yPt4LrOLNRdIU0zzBvKjjjVOg==,iv:vnCeNyPwsEInkPRhX7dN/FMPdiPl9BqwVtKmz2eoLnk=,tag:kDZpZzDB3ajVA2e5KTI7oQ==,type:str]
+    #ENC[AES256_GCM,data:cwUjEmzWpKq1qdddzfsiWN8rVtfxvg5DJIEQOJvPO8ZbpHCclPELTdOJEUQazejh90ngj0SMkrc=,iv:drMg5Eqqo93PjO5VO/5HvpCml3W00skTbl9fhux0sVc=,tag:+GIzN8rALGBAAl1tpLQmbw==,type:comment]
+    #ENC[AES256_GCM,data:hbIjg/B91TK9nAGHBjNFTtIrviCHd9Ze0Q==,iv:gH3b1CTZ6jEtsno+E+5jYg/omMbQENP4WAaHXQEJMNE=,tag:PlguStGEAQ9T95KKg8fipQ==,type:comment]
+    #ENC[AES256_GCM,data:V5lOeQKxkQ0LKh5rkd34FOdBaagNpFfC0YCX6vv/8D05TKQ+7bhZf7zwHSqxRUJgDaIL1G4R1zXSPRhaXnc2wcowDyMOc2p9IrPLT88=,iv:BfHLM6beZd7IwDvPOjN8TAVM7gn6VvUpb7lfitoZ9Pc=,tag:F4advPO/q8XQ+K/4aMcXcA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:7IfV/Ky15AUfjvNnpiCaQkfjUnvX0+6tnxRlo8UaGQHCbveMbI8MeMq2PTBsxkZR,iv:ujB9av2wkqWWvmJZiBHpqmSGs5wwjbm8ApS31ZQJ6E4=,tag:VUGBaHdANb0psClqeVrTCQ==,type:str]
+    #ENC[AES256_GCM,data:OIzS00+USZg9mdvu9R0UEwYj5mnzdg/b6y9CsTXuX2w8vrwJlptPZAElJbp0+m1f3BStR5+iTgx0moMZtCXw2oLKtC1Z22A=,iv:0gvCdd9OFwHv6UWpubOmI1uvt77nVqesg50fELqmXv0=,tag:lHJnBTFEbkFYVPvQkLVtXg==,type:comment]
+    #ENC[AES256_GCM,data:T1Gu5lDI62ZtV5e7KOH3y4e3AyAYDuLDAAAVID2NHmgrm8kqxXSZQRaI31nA7wdGSLXBwtnm,iv:LAaYGz0wPDoH4EB+4h8qNSi+WoLQoUW7Hhqu42GxR0c=,tag:NInzTNsWSfa/NOQpFqdpxQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:OQv5idP0qg==,iv:N3zFBY8q8aq+0LeI4/qOpFhaBjKeogCwTmxVmvEASvY=,tag:rcZELe2/CtOFoTEMAKaWZg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:RA8Uf3WfbYJpEjIscmpWHzZxHrU=,iv:UEWIqkmlrWN2/821VPW0Y5hCo+sxw8kjaKNyL2jaJ1k=,tag:E0/9V4UmfjhYs9XKi7ylnA==,type:str]
+    #ENC[AES256_GCM,data:y5j/JXpHmnE4VithsVU=,iv:wiHNK2BWuMJSfjekx5rhJm8o4MptI34xE8COgyDW6CA=,tag:zPUyEnFDOIYDmqsVkKnA8Q==,type:comment]
+    PODNET: ENC[AES256_GCM,data:nIYEPZnT04hvzLIdlg==,iv:taVOSSm9zgD8+0YS/qJ3rUgDIhn6y0nOuvsdT7TZnxk=,tag:jCwj1tDhJbMcTEO7wS0mOg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:MP/AAfxC6Jx/ukUrEg==,iv:5Tj16l+tBqn7JntbmGe0DF/9gPCHlGiJmkoMT/SI3D4=,tag:xzXE+c2Kv6Ds9DUx6sezKg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Xnc4CA==,iv:Ta/evOFvp8N8rGx8/3qmtEu6wiKYN+Dd21A9pDjoFMU=,tag:9q8YO4iVv/+a6rPyGOXChg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,14 +49,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBITVFyZnNLVzBvV1Z1dWNV
-            dzYvZFdkNnVxM2I1UmpKOE5nQzhmNmlxQ3c0CnFiNk84SHNoYTRxRHpiS0hmTEhk
-            bk04emtYcDRVSmNyc3hPUkRqQzU1VkUKLS0tIEwrL1MrMXNXN0JOTTJ5aHhOMGlm
-            RlZqSDh5dENCNEdRVkJObDFFSE1UM1kKO9JzoS61xMOSszAojq7MFrWkOw7wHxTI
-            ZNuLWapH0aBqBl4XB3ok85iWY6qrKWKe+W1GGnGy2lLd5O8Bht9RxA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArSy9SWUxESlhmOTZtVzRa
+            SVZiY0FHdU90WkJOS21zN2VWaG5BRlIwSXlFClZsZUJJTVRSdHRwMEliRUVqZTYr
+            SmowdmNUQTdONkZxbjJMb2ZNbW92bnMKLS0tIHh3YjJLUHBpalN0UFJvT1VSNmEx
+            R0g0amRLZHBDb1JFK3h0SnNvZVBTMGMKmUuDSAi/vJf0UdxHxGmGEBTV2QuSiqCF
+            CqXKM6NpIWkaA110qODPpTbrrLPpHc6VFVhT9DVTxoY3hcYeyX/PAw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-21T19:59:50Z"
-    mac: ENC[AES256_GCM,data:Kz7eX7Fzu/Jzj62Tiu5HYBOVLyFY6tjNCTNv/i2vHX6cvxXg7yV06qDyPBVJk5d0x1CAgczzs1YF1qYtm71qjSXPehh1eNUcxMzxZ95tu4DV03VLSLaNKjMrx8N8EmC+tujp6jRotyO3S6buY3AZ4dKX8RmYwFl8fVGc2I7G15E=,iv:HatBvDdq/66Q6eLtdQ6EMzyp95xJcHiTgIv35G0+ins=,tag:3MAork4QTUpDB6mdVM1tFA==,type:str]
+    lastmodified: "2024-12-21T20:48:44Z"
+    mac: ENC[AES256_GCM,data:FrNVZL8HzT2ewCOdjjA78FnCAABGjE5RhmGuYkkZhl1fSL0OGy9qvlpKN4wHjOwAaMzXlDU48De8QzuG+pBTWmAuT2dY2WLWM+BzuDEk7nerd78gXEPkJfQJmajaEHOnOJ4fpkRvuJvizB0GHztgKo4j5Qf2DGIDIrYGskbf8sY=,iv:wm468jTqtKNBtqq5V2q6RpbMSSu5zIhV3WW04G72FlI=,tag:mDp+p1Kzac8vLFQfv1edvg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
